# assignment3-spl-client

./: .gitignore  CMakeLists.txt  Makefile
include/: Caster.h  ClientToServerMessage.h  ServerToClientMessage.h  SessionData.h
src/: Caster.cpp  Casters.cpp  ClientToServerMessage.cpp  ConnectionHandler.cpp  EchoClient.cpp  ServerToClientMessage.cpp  SessionData.cpp
tests/: build_all.py  configuration.json  connection_details.json  run_all_tests.py  test_block.py  test_follow_unfollow.py  test_frontal_check.py  test_logstat.py  test_post.py  test_private_messages.py  test_register_and_login.py  tests_functions.py
tests/TESTS/: test_follow_unfollow.py  test_logstat.py  test_private_messages.py  test_register_and_login.py  test_stat.py
